y.output
Terminals unused in grammar

    LEN_STRING
    COMMENT
    SEPARATOR
    ARRAY
    STRUCT
    TUPLE
    OPEN
    CLOSE


Rules useless in parser due to conflicts

   27 expr: expr PLUS_OPERATOR expr
   28     | expr MINUS_OPERATOR expr
   29     | expr MULTI_OPERATOR expr
   30     | expr DIVISION_OPERATOR expr
   31     | expr MOD_OPERATOR expr
   32     | expr POWER_OPERATOR expr
   33     | expr CONCAT expr
   34     | expr EQUAL expr
   35     | expr NOT_EQUAL expr
   36     | expr LEQ expr
   37     | expr GEQ expr
   38     | expr LESS_THAN expr
   39     | expr GREATER_THAN expr
   40     | NOT expr
   41     | expr AND expr
   42     | expr OR expr


State 23 conflicts: 16 shift/reduce
State 26 conflicts: 16 shift/reduce
State 27 conflicts: 15 shift/reduce, 3 reduce/reduce
State 29 conflicts: 15 shift/reduce, 3 reduce/reduce
State 33 conflicts: 15 shift/reduce, 3 reduce/reduce
State 34 conflicts: 15 shift/reduce, 3 reduce/reduce
State 38 conflicts: 16 shift/reduce
State 39 conflicts: 13 shift/reduce, 7 reduce/reduce
State 60 conflicts: 15 shift/reduce, 3 reduce/reduce
State 66 conflicts: 7 shift/reduce, 7 reduce/reduce
State 67 conflicts: 7 shift/reduce, 7 reduce/reduce
State 68 conflicts: 7 shift/reduce, 7 reduce/reduce
State 69 conflicts: 7 shift/reduce, 7 reduce/reduce
State 70 conflicts: 7 shift/reduce, 7 reduce/reduce
State 71 conflicts: 7 shift/reduce, 7 reduce/reduce
State 72 conflicts: 13 shift/reduce, 7 reduce/reduce
State 73 conflicts: 14 shift/reduce, 6 reduce/reduce
State 74 conflicts: 5 shift/reduce, 15 reduce/reduce
State 75 conflicts: 5 shift/reduce, 15 reduce/reduce
State 76 conflicts: 1 shift/reduce, 19 reduce/reduce
State 77 conflicts: 1 shift/reduce, 19 reduce/reduce
State 78 conflicts: 1 shift/reduce, 19 reduce/reduce
State 79 conflicts: 1 shift/reduce, 19 reduce/reduce
State 80 conflicts: 19 reduce/reduce
State 101 conflicts: 16 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: stmlist

    2 stmlist: stm SEMICOLON
    3        | stmlist SEMICOLON stm

    4 stm: TYPE ids
    5    | TYPE ID ASSIGN expr
    6    | ID ASSIGN expr
    7    | ID COPY_STRING expr
    8    | DEF ID PARENTHESES_INITIATOR paramlist PARENTHESES_TERMINATOR BRACES_INITIATOR stmlist BRACES_TERMINATOR
    9    | WHILE expr BRACES_INITIATOR stmlist BRACES_TERMINATOR
   10    | FOR PARENTHESES_INITIATOR TYPE ID ITERATOR BRACKETS_INITIATOR VALUE COMMA VALUE BRACKETS_TERMINATOR BRACES_INITIATOR stmlist BRACES_TERMINATOR
   11    | FOR PARENTHESES_INITIATOR TYPE ID ITERATOR ID BRACES_INITIATOR stmlist BRACES_TERMINATOR
   12    | IF expr BRACES_INITIATOR stmlist BRACES_TERMINATOR
   13    | IF expr BRACES_INITIATOR stmlist BRACES_TERMINATOR ELIF expr BRACES_INITIATOR stmlist BRACES_TERMINATOR
   14    | IF expr BRACES_INITIATOR stmlist BRACES_TERMINATOR ELIF expr BRACES_INITIATOR stmlist BRACES_TERMINATOR ELSE BRACES_INITIATOR stmlist BRACES_TERMINATOR
   15    | IF expr BRACES_INITIATOR stmlist BRACES_TERMINATOR ELSE stm
   16    | BREAK
   17    | RETURN expr
   18    | IN PARENTHESES_INITIATOR ID PARENTHESES_TERMINATOR
   19    | OUT expr

   20 ids: ID
   21    | ID COMMA ids

   22 paramlist: ε
   23          | paramlist COMMA param

   24 param: TYPE ID

   25 expr: val
   26     | expr
   27     | expr PLUS_OPERATOR expr
   28     | expr MINUS_OPERATOR expr
   29     | expr MULTI_OPERATOR expr
   30     | expr DIVISION_OPERATOR expr
   31     | expr MOD_OPERATOR expr
   32     | expr POWER_OPERATOR expr
   33     | expr CONCAT expr
   34     | expr EQUAL expr
   35     | expr NOT_EQUAL expr
   36     | expr LEQ expr
   37     | expr GEQ expr
   38     | expr LESS_THAN expr
   39     | expr GREATER_THAN expr
   40     | NOT expr
   41     | expr AND expr
   42     | expr OR expr
   43     | PARENTHESES_INITIATOR expr PARENTHESES_TERMINATOR

   44 val: ID
   45    | VALUE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <sValue> (258) 5 6 7 8 10 11 18 20 21 24 44
    TYPE <sValue> (259) 4 5 10 11 24
    VALUE <sValue> (260) 10 45
    LEN_STRING <sValue> (261)
    ASSIGN (262) 5 6
    COMMENT (263)
    COMMA (264) 10 21 23
    SEMICOLON (265) 2 3
    SEPARATOR (266)
    DEF (267) 8
    ARRAY (268)
    STRUCT (269)
    TUPLE (270)
    WHILE (271) 9
    FOR (272) 10 11
    ITERATOR (273) 10 11
    IF (274) 12 13 14 15
    ELSE (275) 14 15
    ELIF (276) 13 14
    BREAK (277) 16
    RETURN (278) 17
    BRACES_INITIATOR (279) 8 9 10 11 12 13 14 15
    BRACES_TERMINATOR (280) 8 9 10 11 12 13 14 15
    BRACKETS_INITIATOR (281) 10
    BRACKETS_TERMINATOR (282) 10
    PARENTHESES_INITIATOR (283) 8 10 11 18 43
    PARENTHESES_TERMINATOR (284) 8 18 43
    IN (285) 18
    OUT (286) 19
    OPEN (287)
    CLOSE (288)
    EQUAL (289) 34
    NOT_EQUAL (290) 35
    LEQ (291) 36
    GEQ (292) 37
    GREATER_THAN (293) 39
    LESS_THAN (294) 38
    NOT (295) 40
    AND (296) 41
    OR (297) 42
    PLUS_OPERATOR (298) 27
    MINUS_OPERATOR (299) 28
    MULTI_OPERATOR (300) 29
    DIVISION_OPERATOR (301) 30
    MOD_OPERATOR (302) 31
    POWER_OPERATOR (303) 32
    CONCAT (304) 33
    COPY_STRING (305) 7


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    prog <sValue> (52)
        on left: 1
        on right: 0
    stmlist <sValue> (53)
        on left: 2 3
        on right: 1 3 8 9 10 11 12 13 14 15
    stm <sValue> (54)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19
        on right: 2 3 15
    ids (55)
        on left: 20 21
        on right: 4 21
    paramlist (56)
        on left: 22 23
        on right: 8 23
    param (57)
        on left: 24
        on right: 23
    expr (58)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
        on right: 5 6 7 9 12 13 14 15 17 19 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    val (59)
        on left: 44 45
        on right: 25


State 0

    0 $accept: • prog $end

    ID      shift, and go to state 1
    TYPE    shift, and go to state 2
    DEF     shift, and go to state 3
    WHILE   shift, and go to state 4
    FOR     shift, and go to state 5
    IF      shift, and go to state 6
    BREAK   shift, and go to state 7
    RETURN  shift, and go to state 8
    IN      shift, and go to state 9
    OUT     shift, and go to state 10

    prog     go to state 11
    stmlist  go to state 12
    stm      go to state 13


State 1

    6 stm: ID • ASSIGN expr
    7    | ID • COPY_STRING expr

    ASSIGN       shift, and go to state 14
    COPY_STRING  shift, and go to state 15


State 2

    4 stm: TYPE • ids
    5    | TYPE • ID ASSIGN expr

    ID  shift, and go to state 16

    ids  go to state 17


State 3

    8 stm: DEF • ID PARENTHESES_INITIATOR paramlist PARENTHESES_TERMINATOR BRACES_INITIATOR stmlist BRACES_TERMINATOR

    ID  shift, and go to state 18


State 4

    9 stm: WHILE • expr BRACES_INITIATOR stmlist BRACES_TERMINATOR

    ID                     shift, and go to state 19
    VALUE                  shift, and go to state 20
    PARENTHESES_INITIATOR  shift, and go to state 21
    NOT                    shift, and go to state 22

    expr  go to state 23
    val   go to state 24


State 5

   10 stm: FOR • PARENTHESES_INITIATOR TYPE ID ITERATOR BRACKETS_INITIATOR VALUE COMMA VALUE BRACKETS_TERMINATOR BRACES_INITIATOR stmlist BRACES_TERMINATOR
   11    | FOR • PARENTHESES_INITIATOR TYPE ID ITERATOR ID BRACES_INITIATOR stmlist BRACES_TERMINATOR

    PARENTHESES_INITIATOR  shift, and go to state 25


State 6

   12 stm: IF • expr BRACES_INITIATOR stmlist BRACES_TERMINATOR
   13    | IF • expr BRACES_INITIATOR stmlist BRACES_TERMINATOR ELIF expr BRACES_INITIATOR stmlist BRACES_TERMINATOR
   14    | IF • expr BRACES_INITIATOR stmlist BRACES_TERMINATOR ELIF expr BRACES_INITIATOR stmlist BRACES_TERMINATOR ELSE BRACES_INITIATOR stmlist BRACES_TERMINATOR
   15    | IF • expr BRACES_INITIATOR stmlist BRACES_TERMINATOR ELSE stm

    ID                     shift, and go to state 19
    VALUE                  shift, and go to state 20
    PARENTHESES_INITIATOR  shift, and go to state 21
    NOT                    shift, and go to state 22

    expr  go to state 26
    val   go to state 24


State 7

   16 stm: BREAK •

    $default  reduce using rule 16 (stm)


State 8

   17 stm: RETURN • expr

    ID                     shift, and go to state 19
    VALUE                  shift, and go to state 20
    PARENTHESES_INITIATOR  shift, and go to state 21
    NOT                    shift, and go to state 22

    expr  go to state 27
    val   go to state 24


State 9

   18 stm: IN • PARENTHESES_INITIATOR ID PARENTHESES_TERMINATOR

    PARENTHESES_INITIATOR  shift, and go to state 28


State 10

   19 stm: OUT • expr

    ID                     shift, and go to state 19
    VALUE                  shift, and go to state 20
    PARENTHESES_INITIATOR  shift, and go to state 21
    NOT                    shift, and go to state 22

    expr  go to state 29
    val   go to state 24


State 11

    0 $accept: prog • $end

    $end  shift, and go to state 30


State 12

    1 prog: stmlist •
    3 stmlist: stmlist • SEMICOLON stm

    SEMICOLON  shift, and go to state 31

    $default  reduce using rule 1 (prog)


State 13

    2 stmlist: stm • SEMICOLON

    SEMICOLON  shift, and go to state 32


State 14

    6 stm: ID ASSIGN • expr

    ID                     shift, and go to state 19
    VALUE                  shift, and go to state 20
    PARENTHESES_INITIATOR  shift, and go to state 21
    NOT                    shift, and go to state 22

    expr  go to state 33
    val   go to state 24


State 15

    7 stm: ID COPY_STRING • expr

    ID                     shift, and go to state 19
    VALUE                  shift, and go to state 20
    PARENTHESES_INITIATOR  shift, and go to state 21
    NOT                    shift, and go to state 22

    expr  go to state 34
    val   go to state 24


State 16

    5 stm: TYPE ID • ASSIGN expr
   20 ids: ID •
   21    | ID • COMMA ids

    ASSIGN  shift, and go to state 35
    COMMA   shift, and go to state 36

    $default  reduce using rule 20 (ids)


State 17

    4 stm: TYPE ids •

    $default  reduce using rule 4 (stm)


State 18

    8 stm: DEF ID • PARENTHESES_INITIATOR paramlist PARENTHESES_TERMINATOR BRACES_INITIATOR stmlist BRACES_TERMINATOR

    PARENTHESES_INITIATOR  shift, and go to state 37


State 19

   44 val: ID •

    $default  reduce using rule 44 (val)


State 20

   45 val: VALUE •

    $default  reduce using rule 45 (val)


State 21

   43 expr: PARENTHESES_INITIATOR • expr PARENTHESES_TERMINATOR

    ID                     shift, and go to state 19
    VALUE                  shift, and go to state 20
    PARENTHESES_INITIATOR  shift, and go to state 21
    NOT                    shift, and go to state 22

    expr  go to state 38
    val   go to state 24


State 22

   40 expr: NOT • expr

    ID                     shift, and go to state 19
    VALUE                  shift, and go to state 20
    PARENTHESES_INITIATOR  shift, and go to state 21
    NOT                    shift, and go to state 22

    expr  go to state 39
    val   go to state 24


State 23

    9 stm: WHILE expr • BRACES_INITIATOR stmlist BRACES_TERMINATOR
   26 expr: expr •
   27     | expr • PLUS_OPERATOR expr
   28     | expr • MINUS_OPERATOR expr
   29     | expr • MULTI_OPERATOR expr
   30     | expr • DIVISION_OPERATOR expr
   31     | expr • MOD_OPERATOR expr
   32     | expr • POWER_OPERATOR expr
   33     | expr • CONCAT expr
   34     | expr • EQUAL expr
   35     | expr • NOT_EQUAL expr
   36     | expr • LEQ expr
   37     | expr • GEQ expr
   38     | expr • LESS_THAN expr
   39     | expr • GREATER_THAN expr
   41     | expr • AND expr
   42     | expr • OR expr

    BRACES_INITIATOR   shift, and go to state 40
    EQUAL              shift, and go to state 41
    NOT_EQUAL          shift, and go to state 42
    LEQ                shift, and go to state 43
    GEQ                shift, and go to state 44
    GREATER_THAN       shift, and go to state 45
    LESS_THAN          shift, and go to state 46
    AND                shift, and go to state 47
    OR                 shift, and go to state 48
    PLUS_OPERATOR      shift, and go to state 49
    MINUS_OPERATOR     shift, and go to state 50
    MULTI_OPERATOR     shift, and go to state 51
    DIVISION_OPERATOR  shift, and go to state 52
    MOD_OPERATOR       shift, and go to state 53
    POWER_OPERATOR     shift, and go to state 54
    CONCAT             shift, and go to state 55

    BRACES_INITIATOR   [reduce using rule 26 (expr)]
    EQUAL              [reduce using rule 26 (expr)]
    NOT_EQUAL          [reduce using rule 26 (expr)]
    LEQ                [reduce using rule 26 (expr)]
    GEQ                [reduce using rule 26 (expr)]
    GREATER_THAN       [reduce using rule 26 (expr)]
    LESS_THAN          [reduce using rule 26 (expr)]
    AND                [reduce using rule 26 (expr)]
    OR                 [reduce using rule 26 (expr)]
    PLUS_OPERATOR      [reduce using rule 26 (expr)]
    MINUS_OPERATOR     [reduce using rule 26 (expr)]
    MULTI_OPERATOR     [reduce using rule 26 (expr)]
    DIVISION_OPERATOR  [reduce using rule 26 (expr)]
    MOD_OPERATOR       [reduce using rule 26 (expr)]
    POWER_OPERATOR     [reduce using rule 26 (expr)]
    CONCAT             [reduce using rule 26 (expr)]


State 24

   25 expr: val •

    $default  reduce using rule 25 (expr)


State 25

   10 stm: FOR PARENTHESES_INITIATOR • TYPE ID ITERATOR BRACKETS_INITIATOR VALUE COMMA VALUE BRACKETS_TERMINATOR BRACES_INITIATOR stmlist BRACES_TERMINATOR
   11    | FOR PARENTHESES_INITIATOR • TYPE ID ITERATOR ID BRACES_INITIATOR stmlist BRACES_TERMINATOR

    TYPE  shift, and go to state 56


State 26

   12 stm: IF expr • BRACES_INITIATOR stmlist BRACES_TERMINATOR
   13    | IF expr • BRACES_INITIATOR stmlist BRACES_TERMINATOR ELIF expr BRACES_INITIATOR stmlist BRACES_TERMINATOR
   14    | IF expr • BRACES_INITIATOR stmlist BRACES_TERMINATOR ELIF expr BRACES_INITIATOR stmlist BRACES_TERMINATOR ELSE BRACES_INITIATOR stmlist BRACES_TERMINATOR
   15    | IF expr • BRACES_INITIATOR stmlist BRACES_TERMINATOR ELSE stm
   26 expr: expr •
   27     | expr • PLUS_OPERATOR expr
   28     | expr • MINUS_OPERATOR expr
   29     | expr • MULTI_OPERATOR expr
   30     | expr • DIVISION_OPERATOR expr
   31     | expr • MOD_OPERATOR expr
   32     | expr • POWER_OPERATOR expr
   33     | expr • CONCAT expr
   34     | expr • EQUAL expr
   35     | expr • NOT_EQUAL expr
   36     | expr • LEQ expr
   37     | expr • GEQ expr
   38     | expr • LESS_THAN expr
   39     | expr • GREATER_THAN expr
   41     | expr • AND expr
   42     | expr • OR expr

    BRACES_INITIATOR   shift, and go to state 57
    EQUAL              shift, and go to state 41
    NOT_EQUAL          shift, and go to state 42
    LEQ                shift, and go to state 43
    GEQ                shift, and go to state 44
    GREATER_THAN       shift, and go to state 45
    LESS_THAN          shift, and go to state 46
    AND                shift, and go to state 47
    OR                 shift, and go to state 48
    PLUS_OPERATOR      shift, and go to state 49
    MINUS_OPERATOR     shift, and go to state 50
    MULTI_OPERATOR     shift, and go to state 51
    DIVISION_OPERATOR  shift, and go to state 52
    MOD_OPERATOR       shift, and go to state 53
    POWER_OPERATOR     shift, and go to state 54
    CONCAT             shift, and go to state 55

    BRACES_INITIATOR   [reduce using rule 26 (expr)]
    EQUAL              [reduce using rule 26 (expr)]
    NOT_EQUAL          [reduce using rule 26 (expr)]
    LEQ                [reduce using rule 26 (expr)]
    GEQ                [reduce using rule 26 (expr)]
    GREATER_THAN       [reduce using rule 26 (expr)]
    LESS_THAN          [reduce using rule 26 (expr)]
    AND                [reduce using rule 26 (expr)]
    OR                 [reduce using rule 26 (expr)]
    PLUS_OPERATOR      [reduce using rule 26 (expr)]
    MINUS_OPERATOR     [reduce using rule 26 (expr)]
    MULTI_OPERATOR     [reduce using rule 26 (expr)]
    DIVISION_OPERATOR  [reduce using rule 26 (expr)]
    MOD_OPERATOR       [reduce using rule 26 (expr)]
    POWER_OPERATOR     [reduce using rule 26 (expr)]
    CONCAT             [reduce using rule 26 (expr)]


State 27

   17 stm: RETURN expr •
   26 expr: expr •
   27     | expr • PLUS_OPERATOR expr
   28     | expr • MINUS_OPERATOR expr
   29     | expr • MULTI_OPERATOR expr
   30     | expr • DIVISION_OPERATOR expr
   31     | expr • MOD_OPERATOR expr
   32     | expr • POWER_OPERATOR expr
   33     | expr • CONCAT expr
   34     | expr • EQUAL expr
   35     | expr • NOT_EQUAL expr
   36     | expr • LEQ expr
   37     | expr • GEQ expr
   38     | expr • LESS_THAN expr
   39     | expr • GREATER_THAN expr
   41     | expr • AND expr
   42     | expr • OR expr

    EQUAL              shift, and go to state 41
    NOT_EQUAL          shift, and go to state 42
    LEQ                shift, and go to state 43
    GEQ                shift, and go to state 44
    GREATER_THAN       shift, and go to state 45
    LESS_THAN          shift, and go to state 46
    AND                shift, and go to state 47
    OR                 shift, and go to state 48
    PLUS_OPERATOR      shift, and go to state 49
    MINUS_OPERATOR     shift, and go to state 50
    MULTI_OPERATOR     shift, and go to state 51
    DIVISION_OPERATOR  shift, and go to state 52
    MOD_OPERATOR       shift, and go to state 53
    POWER_OPERATOR     shift, and go to state 54
    CONCAT             shift, and go to state 55

    $end               reduce using rule 17 (stm)
    $end               [reduce using rule 26 (expr)]
    SEMICOLON          reduce using rule 17 (stm)
    SEMICOLON          [reduce using rule 26 (expr)]
    BRACES_TERMINATOR  reduce using rule 17 (stm)
    BRACES_TERMINATOR  [reduce using rule 26 (expr)]
    EQUAL              [reduce using rule 26 (expr)]
    NOT_EQUAL          [reduce using rule 26 (expr)]
    LEQ                [reduce using rule 26 (expr)]
    GEQ                [reduce using rule 26 (expr)]
    GREATER_THAN       [reduce using rule 26 (expr)]
    LESS_THAN          [reduce using rule 26 (expr)]
    AND                [reduce using rule 26 (expr)]
    OR                 [reduce using rule 26 (expr)]
    PLUS_OPERATOR      [reduce using rule 26 (expr)]
    MINUS_OPERATOR     [reduce using rule 26 (expr)]
    MULTI_OPERATOR     [reduce using rule 26 (expr)]
    DIVISION_OPERATOR  [reduce using rule 26 (expr)]
    MOD_OPERATOR       [reduce using rule 26 (expr)]
    POWER_OPERATOR     [reduce using rule 26 (expr)]
    CONCAT             [reduce using rule 26 (expr)]
    $default           reduce using rule 17 (stm)


State 28

   18 stm: IN PARENTHESES_INITIATOR • ID PARENTHESES_TERMINATOR

    ID  shift, and go to state 58


State 29

   19 stm: OUT expr •
   26 expr: expr •
   27     | expr • PLUS_OPERATOR expr
   28     | expr • MINUS_OPERATOR expr
   29     | expr • MULTI_OPERATOR expr
   30     | expr • DIVISION_OPERATOR expr
   31     | expr • MOD_OPERATOR expr
   32     | expr • POWER_OPERATOR expr
   33     | expr • CONCAT expr
   34     | expr • EQUAL expr
   35     | expr • NOT_EQUAL expr
   36     | expr • LEQ expr
   37     | expr • GEQ expr
   38     | expr • LESS_THAN expr
   39     | expr • GREATER_THAN expr
   41     | expr • AND expr
   42     | expr • OR expr

    EQUAL              shift, and go to state 41
    NOT_EQUAL          shift, and go to state 42
    LEQ                shift, and go to state 43
    GEQ                shift, and go to state 44
    GREATER_THAN       shift, and go to state 45
    LESS_THAN          shift, and go to state 46
    AND                shift, and go to state 47
    OR                 shift, and go to state 48
    PLUS_OPERATOR      shift, and go to state 49
    MINUS_OPERATOR     shift, and go to state 50
    MULTI_OPERATOR     shift, and go to state 51
    DIVISION_OPERATOR  shift, and go to state 52
    MOD_OPERATOR       shift, and go to state 53
    POWER_OPERATOR     shift, and go to state 54
    CONCAT             shift, and go to state 55

    $end               reduce using rule 19 (stm)
    $end               [reduce using rule 26 (expr)]
    SEMICOLON          reduce using rule 19 (stm)
    SEMICOLON          [reduce using rule 26 (expr)]
    BRACES_TERMINATOR  reduce using rule 19 (stm)
    BRACES_TERMINATOR  [reduce using rule 26 (expr)]
    EQUAL              [reduce using rule 26 (expr)]
    NOT_EQUAL          [reduce using rule 26 (expr)]
    LEQ                [reduce using rule 26 (expr)]
    GEQ                [reduce using rule 26 (expr)]
    GREATER_THAN       [reduce using rule 26 (expr)]
    LESS_THAN          [reduce using rule 26 (expr)]
    AND                [reduce using rule 26 (expr)]
    OR                 [reduce using rule 26 (expr)]
    PLUS_OPERATOR      [reduce using rule 26 (expr)]
    MINUS_OPERATOR     [reduce using rule 26 (expr)]
    MULTI_OPERATOR     [reduce using rule 26 (expr)]
    DIVISION_OPERATOR  [reduce using rule 26 (expr)]
    MOD_OPERATOR       [reduce using rule 26 (expr)]
    POWER_OPERATOR     [reduce using rule 26 (expr)]
    CONCAT             [reduce using rule 26 (expr)]
    $default           reduce using rule 19 (stm)


State 30

    0 $accept: prog $end •

    $default  accept


State 31

    3 stmlist: stmlist SEMICOLON • stm

    ID      shift, and go to state 1
    TYPE    shift, and go to state 2
    DEF     shift, and go to state 3
    WHILE   shift, and go to state 4
    FOR     shift, and go to state 5
    IF      shift, and go to state 6
    BREAK   shift, and go to state 7
    RETURN  shift, and go to state 8
    IN      shift, and go to state 9
    OUT     shift, and go to state 10

    stm  go to state 59


State 32

    2 stmlist: stm SEMICOLON •

    $default  reduce using rule 2 (stmlist)


State 33

    6 stm: ID ASSIGN expr •
   26 expr: expr •
   27     | expr • PLUS_OPERATOR expr
   28     | expr • MINUS_OPERATOR expr
   29     | expr • MULTI_OPERATOR expr
   30     | expr • DIVISION_OPERATOR expr
   31     | expr • MOD_OPERATOR expr
   32     | expr • POWER_OPERATOR expr
   33     | expr • CONCAT expr
   34     | expr • EQUAL expr
   35     | expr • NOT_EQUAL expr
   36     | expr • LEQ expr
   37     | expr • GEQ expr
   38     | expr • LESS_THAN expr
   39     | expr • GREATER_THAN expr
   41     | expr • AND expr
   42     | expr • OR expr

    EQUAL              shift, and go to state 41
    NOT_EQUAL          shift, and go to state 42
    LEQ                shift, and go to state 43
    GEQ                shift, and go to state 44
    GREATER_THAN       shift, and go to state 45
    LESS_THAN          shift, and go to state 46
    AND                shift, and go to state 47
    OR                 shift, and go to state 48
    PLUS_OPERATOR      shift, and go to state 49
    MINUS_OPERATOR     shift, and go to state 50
    MULTI_OPERATOR     shift, and go to state 51
    DIVISION_OPERATOR  shift, and go to state 52
    MOD_OPERATOR       shift, and go to state 53
    POWER_OPERATOR     shift, and go to state 54
    CONCAT             shift, and go to state 55

    $end               reduce using rule 6 (stm)
    $end               [reduce using rule 26 (expr)]
    SEMICOLON          reduce using rule 6 (stm)
    SEMICOLON          [reduce using rule 26 (expr)]
    BRACES_TERMINATOR  reduce using rule 6 (stm)
    BRACES_TERMINATOR  [reduce using rule 26 (expr)]
    EQUAL              [reduce using rule 26 (expr)]
    NOT_EQUAL          [reduce using rule 26 (expr)]
    LEQ                [reduce using rule 26 (expr)]
    GEQ                [reduce using rule 26 (expr)]
    GREATER_THAN       [reduce using rule 26 (expr)]
    LESS_THAN          [reduce using rule 26 (expr)]
    AND                [reduce using rule 26 (expr)]
    OR                 [reduce using rule 26 (expr)]
    PLUS_OPERATOR      [reduce using rule 26 (expr)]
    MINUS_OPERATOR     [reduce using rule 26 (expr)]
    MULTI_OPERATOR     [reduce using rule 26 (expr)]
    DIVISION_OPERATOR  [reduce using rule 26 (expr)]
    MOD_OPERATOR       [reduce using rule 26 (expr)]
    POWER_OPERATOR     [reduce using rule 26 (expr)]
    CONCAT             [reduce using rule 26 (expr)]
    $default           reduce using rule 6 (stm)


State 34

    7 stm: ID COPY_STRING expr •
   26 expr: expr •
   27     | expr • PLUS_OPERATOR expr
   28     | expr • MINUS_OPERATOR expr
   29     | expr • MULTI_OPERATOR expr
   30     | expr • DIVISION_OPERATOR expr
   31     | expr • MOD_OPERATOR expr
   32     | expr • POWER_OPERATOR expr
   33     | expr • CONCAT expr
   34     | expr • EQUAL expr
   35     | expr • NOT_EQUAL expr
   36     | expr • LEQ expr
   37     | expr • GEQ expr
   38     | expr • LESS_THAN expr
   39     | expr • GREATER_THAN expr
   41     | expr • AND expr
   42     | expr • OR expr

    EQUAL              shift, and go to state 41
    NOT_EQUAL          shift, and go to state 42
    LEQ                shift, and go to state 43
    GEQ                shift, and go to state 44
    GREATER_THAN       shift, and go to state 45
    LESS_THAN          shift, and go to state 46
    AND                shift, and go to state 47
    OR                 shift, and go to state 48
    PLUS_OPERATOR      shift, and go to state 49
    MINUS_OPERATOR     shift, and go to state 50
    MULTI_OPERATOR     shift, and go to state 51
    DIVISION_OPERATOR  shift, and go to state 52
    MOD_OPERATOR       shift, and go to state 53
    POWER_OPERATOR     shift, and go to state 54
    CONCAT             shift, and go to state 55

    $end               reduce using rule 7 (stm)
    $end               [reduce using rule 26 (expr)]
    SEMICOLON          reduce using rule 7 (stm)
    SEMICOLON          [reduce using rule 26 (expr)]
    BRACES_TERMINATOR  reduce using rule 7 (stm)
    BRACES_TERMINATOR  [reduce using rule 26 (expr)]
    EQUAL              [reduce using rule 26 (expr)]
    NOT_EQUAL          [reduce using rule 26 (expr)]
    LEQ                [reduce using rule 26 (expr)]
    GEQ                [reduce using rule 26 (expr)]
    GREATER_THAN       [reduce using rule 26 (expr)]
    LESS_THAN          [reduce using rule 26 (expr)]
    AND                [reduce using rule 26 (expr)]
    OR                 [reduce using rule 26 (expr)]
    PLUS_OPERATOR      [reduce using rule 26 (expr)]
    MINUS_OPERATOR     [reduce using rule 26 (expr)]
    MULTI_OPERATOR     [reduce using rule 26 (expr)]
    DIVISION_OPERATOR  [reduce using rule 26 (expr)]
    MOD_OPERATOR       [reduce using rule 26 (expr)]
    POWER_OPERATOR     [reduce using rule 26 (expr)]
    CONCAT             [reduce using rule 26 (expr)]
    $default           reduce using rule 7 (stm)


State 35

    5 stm: TYPE ID ASSIGN • expr

    ID                     shift, and go to state 19
    VALUE                  shift, and go to state 20
    PARENTHESES_INITIATOR  shift, and go to state 21
    NOT                    shift, and go to state 22

    expr  go to state 60
    val   go to state 24


State 36

   21 ids: ID COMMA • ids

    ID  shift, and go to state 61

    ids  go to state 62


State 37

    8 stm: DEF ID PARENTHESES_INITIATOR • paramlist PARENTHESES_TERMINATOR BRACES_INITIATOR stmlist BRACES_TERMINATOR

    $default  reduce using rule 22 (paramlist)

    paramlist  go to state 63


State 38

   26 expr: expr •
   27     | expr • PLUS_OPERATOR expr
   28     | expr • MINUS_OPERATOR expr
   29     | expr • MULTI_OPERATOR expr
   30     | expr • DIVISION_OPERATOR expr
   31     | expr • MOD_OPERATOR expr
   32     | expr • POWER_OPERATOR expr
   33     | expr • CONCAT expr
   34     | expr • EQUAL expr
   35     | expr • NOT_EQUAL expr
   36     | expr • LEQ expr
   37     | expr • GEQ expr
   38     | expr • LESS_THAN expr
   39     | expr • GREATER_THAN expr
   41     | expr • AND expr
   42     | expr • OR expr
   43     | PARENTHESES_INITIATOR expr • PARENTHESES_TERMINATOR

    PARENTHESES_TERMINATOR  shift, and go to state 64
    EQUAL                   shift, and go to state 41
    NOT_EQUAL               shift, and go to state 42
    LEQ                     shift, and go to state 43
    GEQ                     shift, and go to state 44
    GREATER_THAN            shift, and go to state 45
    LESS_THAN               shift, and go to state 46
    AND                     shift, and go to state 47
    OR                      shift, and go to state 48
    PLUS_OPERATOR           shift, and go to state 49
    MINUS_OPERATOR          shift, and go to state 50
    MULTI_OPERATOR          shift, and go to state 51
    DIVISION_OPERATOR       shift, and go to state 52
    MOD_OPERATOR            shift, and go to state 53
    POWER_OPERATOR          shift, and go to state 54
    CONCAT                  shift, and go to state 55

    PARENTHESES_TERMINATOR  [reduce using rule 26 (expr)]
    EQUAL                   [reduce using rule 26 (expr)]
    NOT_EQUAL               [reduce using rule 26 (expr)]
    LEQ                     [reduce using rule 26 (expr)]
    GEQ                     [reduce using rule 26 (expr)]
    GREATER_THAN            [reduce using rule 26 (expr)]
    LESS_THAN               [reduce using rule 26 (expr)]
    AND                     [reduce using rule 26 (expr)]
    OR                      [reduce using rule 26 (expr)]
    PLUS_OPERATOR           [reduce using rule 26 (expr)]
    MINUS_OPERATOR          [reduce using rule 26 (expr)]
    MULTI_OPERATOR          [reduce using rule 26 (expr)]
    DIVISION_OPERATOR       [reduce using rule 26 (expr)]
    MOD_OPERATOR            [reduce using rule 26 (expr)]
    POWER_OPERATOR          [reduce using rule 26 (expr)]
    CONCAT                  [reduce using rule 26 (expr)]


State 39

   26 expr: expr •
   27     | expr • PLUS_OPERATOR expr
   28     | expr • MINUS_OPERATOR expr
   29     | expr • MULTI_OPERATOR expr
   30     | expr • DIVISION_OPERATOR expr
   31     | expr • MOD_OPERATOR expr
   32     | expr • POWER_OPERATOR expr
   33     | expr • CONCAT expr
   34     | expr • EQUAL expr
   35     | expr • NOT_EQUAL expr
   36     | expr • LEQ expr
   37     | expr • GEQ expr
   38     | expr • LESS_THAN expr
   39     | expr • GREATER_THAN expr
   40     | NOT expr •
   41     | expr • AND expr
   42     | expr • OR expr

    EQUAL              shift, and go to state 41
    NOT_EQUAL          shift, and go to state 42
    LEQ                shift, and go to state 43
    GEQ                shift, and go to state 44
    GREATER_THAN       shift, and go to state 45
    LESS_THAN          shift, and go to state 46
    PLUS_OPERATOR      shift, and go to state 49
    MINUS_OPERATOR     shift, and go to state 50
    MULTI_OPERATOR     shift, and go to state 51
    DIVISION_OPERATOR  shift, and go to state 52
    MOD_OPERATOR       shift, and go to state 53
    POWER_OPERATOR     shift, and go to state 54
    CONCAT             shift, and go to state 55
